[package]
name = "wingman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version ="1.17", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
serenity = {version = "0.10", features = ["cache", "framework", "standard_framework", "rustls_backend"] }
tracing = "0.1"